add button isntagram

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
              and engage with clients to ensure their needs are met.</p>
          <div>
             <button>Connect on LinkedIn</button>
+            <button>Follow on Instagram</button>
          </div>
         
         </article>
