improve code quality and add more pages

--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saiful Azri</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Saiful Azri</h1>
+      <h1>Saiful Azri</h1>
 
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Contact</li>
-                <li>Blog</li>
-                <li>About</li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li>Blog</li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <article>
-            <img 
-            width="200"
-            height="200"
-            src="/images/home.png" alt="Saiful Azri">
-            <H2>Hello , I'm Azri</H2>
-            <p>Hi, my name is Saiful Azri Siregar, and I am a passionate and results-driven Software Engineer. 
-             With a strong foundation in [list some of the programming languages or technologies you're 
-             skilled in, e.g., Java, Python, JavaScript, etc.],</p>
+      <article>
+        <img
+          width="200"
+          height="200"
+          src="/images/azri.jpg"
+          alt="Saiful Azri"
+        />
+        <h2>Hello, I'm Azri</h2>
+        <p>
+          Hi, my name is Saiful Azri Siregar, and I am a passionate and
+          results-driven Software Engineer. With a strong foundation in [list
+          some of the programming languages or technologies you're skilled in,
+          e.g., Java, Python, JavaScript, etc.],
+        </p>
 
-
-            <p>I am proficient in [mention specific technologies, frameworks, or tools you've worked with], 
-             and I am committed to staying up-to-date with the latest industry trends and best practices. 
-             My technical expertise is complemented by my strong communication skills which enable me to 
-             effectively collaborate with cross-functional teams, translate complex technical concepts into,
-             understandable terms,
-             and engage with clients to ensure their needs are met.</p>
-         <div>
-            <button>Connect on LinkedIn</button>
-            <button>Follow on Instagram</button>
-         </div>
-        
-        </article>
+        <p>
+          I am proficient in HTML, CSS, JavaScript. And I am committed to
+          staying up-to-date with the latest industry trends and best practices.
+          My technical expertise is complemented by my strong communication
+          skills which enable me to effectively collaborate with
+          cross-functional teams, translate complex technical concepts into,
+          understandable terms, and engage with clients to ensure their needs
+          are met.
+        </p>
+        <div>
+          <button>Connect on LinkedIn</button>
+          <button>Follow on Instagram</button>
+        </div>
+      </article>
     </main>
+
     <footer>
-        <p>Copyright 2025</p>
+      <p>Copyright 2025</p>
     </footer>
-</body>
+  </body>
 </html>
