azri boss photo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saiful Azri</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <header>
       <h1>Saiful Azri</h1>
 
@@ -23,9 +23,10 @@
     <main>
       <article>
         <img
-          width="200"
-          height="200"
-          src="/images/azri.jpg"
+          class="photo"
+          width="486"
+          height="546"
+          src="/images/azri-boss.jpg"
           alt="Saiful Azri"
         />
         <h2>Hello, I'm Azri</h2>
