style navbar elements

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
-      <h1>Saiful Azri</h1>
+    <header class="navbar">
+      <h1 class="logo">🏋️‍♂️ Saiful Azri Siregar</h1>
 
       <nav>
-        <ul>
+        <ul class="navlinks">
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/contact.html">Contact</a></li>
