add new image and add cursor point

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           class="photo"
           width="486"
           height="546"
-          src="/images/azri-boss.jpg"
+          src="/images/azri01.png"
           alt="Saiful Azri"
         />
         <h2>Hello, I'm Azri</h2>
@@ -47,8 +47,13 @@
           are met.
         </p>
         <div>
-          <button>Connect on LinkedIn</button>
-          <button>Follow on Instagram</button>
+          <a href="https://www.linkedin.com/in/saifulazrisiregar/">
+            <button>Connect on LinkedIn</button>
+          </a>
+          <a href="https://www.instagram.com/oiazri">
+            <button>Follow on Instagram</button>
+          </a>
+          <button>Email</button>
         </div>
       </article>
     </main>
