feat: improve site layout, navigation bar, improve styles

--- a/about.html
+++ b/about.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <header class="navbar">
+      <a href="/">
+        <h1 class="logo">🏋️‍♂️ Saiful Azri Siregar</h1>
+      </a>
+      <nav>
+        <ul class="navlinks">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+          <li>Blog</li>
+        </ul>
+      </nav>
+    </header>
+
     <h1>About</h1>
   </body>
 </html>
