--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <header class="navbar">
-      <h1 class="logo">🏋️‍♂️ Saiful Azri Siregar</h1>
-
+      <a href="/">
+        <h1 class="logo">🏋️‍♂️ Saiful Azri Siregar</h1>
+      </a>
       <nav>
         <ul class="navlinks">
           <li><a href="/">Home</a></li>
@@ -20,15 +21,9 @@
       </nav>
     </header>
 
-    <main>
+    <main class="site-content">
       <article>
-        <img
-          class="photo"
-          width="486"
-          height="546"
-          src="/images/azri01.png"
-          alt="Saiful Azri"
-        />
+        <img class="photo" src="/images/azri01.png" alt="Saiful Azri" />
         <h2>Hello, I'm Azri</h2>
         <p>
           Hi, my name is Saiful Azri Siregar, and I am a passionate and
@@ -46,14 +41,17 @@
           understandable terms, and engage with clients to ensure their needs
           are met.
         </p>
-        <div>
-          <a href="https://www.linkedin.com/in/saifulazrisiregar/">
-            <button>Connect on LinkedIn</button>
+        <div class="buttons">
+          <a
+            class="button"
+            href="https://www.linkedin.com/in/saifulazrisiregar/"
+          >
+            Connect on LinkedIn
           </a>
-          <a href="https://www.instagram.com/oiazri">
-            <button>Follow on Instagram</button>
+          <a class="button" href="https://www.instagram.com/oiazri">
+            Follow on Instagram
           </a>
-          <button>Email</button>
+          <a class="button" href="mailto:example@gmail.com">Email Me</a>
         </div>
       </article>
     </main>
