add new image and add div

--- a/index.html
+++ b/index.html
@@ -15,37 +15,43 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/contact.html">Contact</a></li>
-          <li>Blog</li>
+          <li><a href="/">Blog</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <article>
-        <img
-          class="photo"
-          width="486"
-          height="546"
-          src="/images/azri01.png"
-          alt="Saiful Azri"
-        />
-        <h2>Hello, I'm Azri</h2>
-        <p>
-          Hi, my name is Saiful Azri Siregar, and I am a passionate and
-          results-driven Software Engineer. With a strong foundation in [list
-          some of the programming languages or technologies you're skilled in,
-          e.g., Java, Python, JavaScript, etc.],
-        </p>
+        <div class="container">
+          <div class="cotainer-foto">
+            <img
+              class="photo"
+              width="486"
+              height="546"
+              src="/images/azri01.png"
+              alt="Saiful Azri"
+            />
+          </div>
+          <div class="container-artikel">
+            <h2>Hello, I'm Azri</h2>
+            <p>
+              Hi, my name is <b>Saiful Azri Siregar</b>, and I am a passionate
+              and results-driven Software Engineer. With a strong foundation in
+              [list some of the programming languages or technologies you're
+              skilled in, e.g., Java, Python, JavaScript, etc.],
+            </p>
 
-        <p>
-          I am proficient in HTML, CSS, JavaScript. And I am committed to
-          staying up-to-date with the latest industry trends and best practices.
-          My technical expertise is complemented by my strong communication
-          skills which enable me to effectively collaborate with
-          cross-functional teams, translate complex technical concepts into,
-          understandable terms, and engage with clients to ensure their needs
-          are met.
-        </p>
+            <p>
+              I am proficient in HTML, CSS, JavaScript. And I am committed to
+              staying up-to-date with the latest industry trends and best
+              practices. My technical expertise is complemented by my strong
+              communication skills which enable me to effectively collaborate
+              with cross-functional teams, translate complex technical concepts
+              into, understandable terms, and engage with clients to ensure
+              their needs are met.
+            </p>
+          </div>
+        </div>
         <div>
           <a href="https://www.linkedin.com/in/saifulazrisiregar/">
             <button>Connect on LinkedIn</button>
